--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,5 @@ include LICENSE
 include README.md
 include onionshare/*.html
 include onionshare/strings.json
-include onionshare_gui/html/*
+include onionshare_gui/templates/*
+include onionshare_gui/static/*
