--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
 include LICENSE
 include README.md
+include version
 include onionshare/*.html
 include onionshare/strings.json
 include onionshare_gui/templates/*
