--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,7 +1,12 @@
 include LICENSE
 include README.md
+include BUILD.md
 include version
-include onionshare/*.html
+include onionshare/index.html
 include onionshare/strings.json
-include onionshare_gui/templates/*
-include onionshare_gui/static/*
+include onionshare_gui/templates/index.html
+include onionshare_gui/static/jquery-1.11.1.min.js
+include onionshare_gui/static/onionshare.js
+include onionshare_gui/static/style.css
+include onionshare_gui/static/loader.gif
+include onionshare_gui/static/logo.png
