added setup files to MANIFEST.in for RPM building to work, and updated RPM build instructions (#25)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,3 +10,5 @@ include onionshare_gui/static/onionshare.js
 include onionshare_gui/static/style.css
 include onionshare_gui/static/loader.gif
 include onionshare_gui/static/logo.png
+include setup/onionshare.desktop
+include setup/onionshare80.xpm
