changed gtk deps to qt4

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Package: onionshare
-Depends: python-flask, python-stem, python-webkit
+Depends: python-flask, python-stem, python-qt4
 Suite: trusty
