--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ python:
   - "3.2"
   - "3.3"
 # command to install dependencies
-before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-flask python-stem python-qt4"
-install: "pip install -r requirements.txt"
+before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-flask python-qt4"
+install: "pip install nose flask stem"
 # command to run tests
 script: nosetests test
 
