--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,5 +6,6 @@ include onionshare/index.html
 include onionshare/404.html
 include onionshare/strings.json
 include onionshare_gui/logo.png
+include onionshare_gui/drop_files.png
 include setup/onionshare.desktop
 include setup/onionshare80.xpm
