--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,5 +7,8 @@ include onionshare/404.html
 include onionshare/strings.json
 include onionshare_gui/logo.png
 include onionshare_gui/drop_files.png
+include onionshare_gui/server_stopped.png
+include onionshare_gui/server_started.png
+include onionshare_gui/server_working.png
 include setup/onionshare.desktop
 include setup/onionshare80.xpm
