waits for hidden service before displaying URL. fixes #116

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Package: onionshare
-Depends: python-flask, python-stem
+Depends: python-flask, python-stem, python-socksipy
 Suite: trusty
