--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "2.6"
   - "2.7"
 # command to install dependencies
-before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-flask python-qt4"
+before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-flask python-qt4 python-socksipy"
 install: "pip install nose flask stem"
 # command to run tests
 script: nosetests test
