--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,8 @@ python:
   - "2.6"
   - "2.7"
 # command to install dependencies
-before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-flask python-qt4"
-install: "pip install nose flask stem SocksiPy"
+before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-flask python-qt4 python-socksipy"
+install: "pip install nose flask stem"
 # command to run tests
 script: nosetests test
 
