--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,4 +1,4 @@
 [DEFAULT]
 Package: onionshare
-Depends: python-flask, python-stem, python-socksipy
+Depends: python-flask, python-stem
 Suite: trusty
