adding image files to MANIFEST.in

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,3 +7,4 @@ include onionshare/404.html
 include onionshare/strings.json
 include setup/onionshare.desktop
 include setup/onionshare80.xpm
+include images/*.png
