Added AppData file, and made new screenshots for it (fixes #160)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ include onionshare/index.html
 include onionshare/404.html
 include onionshare/strings.json
 include install/onionshare.desktop
+include install/onionshare.appdata.xml
 include install/onionshare80.xpm
 include images/*.png
 include locale/*.json
