Adds python-qt4 as a debian dependency (fixes #230)

--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
 Package: onionshare
-Depends: python-flask, python-stem
+Depends: python-flask, python-stem, python-qt4
 Build-Depends: dh-python
 Suite: trusty
