Update desktop entry
- Remove UTF-8 entry - it is now redundant; see http://standards.freedesktop.org/desktop-entry-spec/latest/apc.html
- Add some suggested keywords; see http://standards.freedesktop.org/desktop-entry-spec/latest/ar01s05.html

--- a/install/onionshare.desktop
+++ b/install/onionshare.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=OnionShare
 Comment=Share a file securely and anonymously over Tor
 Exec=/usr/bin/onionshare-gui
@@ -7,3 +6,4 @@ Terminal=false
 Type=Application
 Icon=/usr/share/pixmaps/onionshare80.xpm
 Categories=Network;
+Keywords=tor;anonymity;privacy;onion service;file sharing;file hosting;
