--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,5 @@
 [DEFAULT]
-Package: onionshare
-Depends: python-flask, python-stem, python-qt4
-Build-Depends: dh-python
+Package3: onionshare
+Depends3: python3-flask, python3-stem, python3-pyqt5
+Build-Depends3: python3-stdeb, python3-nose
 Suite: trusty
