--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,5 +1,6 @@
 [DEFAULT]
 Package3: onionshare
 Depends3: python3-flask, python3-stem, python3-pyqt5
-Build-Depends3: python3-stdeb, python3-nose
-Suite: trusty
+Build-Depends3: python3-nose
+Suite: trusty utopic vivid wily xenial jessie
+X-Python3-Version: >= 3.2
