--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
 language: python
 python:
-  - "2.6"
-  - "2.7"
+  - "3.2"
 # command to install dependencies
-before_install: "sudo apt-get install -y build-essential fakeroot python-all python-stdeb python-qt4"
-install: "pip install nose flask stem"
+before_install: "sudo apt-get install python3-nose"
+install: "pip3 install flask stem"
 # command to run tests
-script: nosetests test
+script: nosetests3
 
