--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: python
+sudo: required
+dist: trusty
 python:
-  - "3.2"
+  - "3.4"
+  - "3.5"
 # command to install dependencies
-before_install: "sudo apt-get install python3-nose"
-install: "pip3 install flask stem"
+before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5"
+install: ""
 # command to run tests
 script: nosetests3
-
