Added a simple nautilus extension, written by the Subgraph developers (fixes #293)

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -8,3 +8,4 @@ include resources/html/*
 include install/onionshare.desktop
 include install/onionshare.appdata.xml
 include install/onionshare80.xpm
+include install/scripts/onionshare-nautilus.py
