--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 Package3: onionshare
-Depends3: python3-flask, python3-stem, python3-pyqt5
+Depends3: python3-flask, python3-stem, python3-pyqt5, python-nautilus
 Build-Depends3: python3-nose, python3-flask, python3-stem, python3-pyqt5
 Build-Depends: python3-nose, python3-flask, python3-stem, python3-pyqt5
 Suite: wily
