--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -3,5 +3,5 @@ Package3: onionshare
 Depends3: python3-flask, python3-stem, python3-pyqt5, python-nautilus
 Build-Depends3: python3-nose, python3-flask, python3-stem, python3-pyqt5
 Build-Depends: python3-nose, python3-flask, python3-stem, python3-pyqt5
-Suite: wily
+Suite: xenial
 X-Python3-Version: >= 3.2
