--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ dist: trusty
 python:
   - "3.4"
   - "3.5"
+  - "3.6"
+  - "3.6-dev"
+  - "3.7-dev"
+  - "nightly"
 # command to install dependencies
 before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5"
 install: ""
