--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,11 @@ python:
   - "3.7-dev"
   - "nightly"
 # command to install dependencies
-before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5"
+before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5 xvfbz"
 install: ""
 # command to run tests
-script: nosetests3
+script
+- xvfb-run python3 test/onionshare_gui_test.py  | egrep -v "QWidget|QPainter"
+- xvfb-run python3 test/onionshare_settings_test.py  | egrep -v "QWidget|QPainter"
+- nosetests test/onionshare_common_test.py
+- nosetests test/onionshare_strings_test.py
