--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,4 @@ python:
 before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5 xvfb"
 install: ""
 # command to run tests
-script:
-- xvfb-run python3 test/onionshare_gui_test.py  | egrep -v "QWidget|QPainter"
-- xvfb-run python3 test/onionshare_settings_test.py  | egrep -v "QWidget|QPainter"
-- nosetests test/onionshare_common_test.py
-- nosetests test/onionshare_strings_test.py
+script: xvfb-run nosetests3
