add a test wrapper script which skips the problematic strings test that gets bleed from other tests. Also can work on local dev machines with X rather than use xvfb

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,4 @@ before_install:
 - sudo pip3 install stem
 install: ""
 # command to run tests
-script: xvfb-run nosetests3
+script: ./dev_scripts/tests
