--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
 - echo "deb http://deb.torproject.org/torproject.org trusty main" | sudo tee -a /etc/apt/sources.list.d/torproject.list
 - gpg --keyserver keys.gnupg.net --recv A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89
 - gpg --export A3C4F0F979CAA22CDBA8F512EE8CBC9E886DDD89 | sudo apt-key add -
-- sudo apt-get update; sudo apt-get install -y python3-pytest python3-flask python3-pyqt5 python3-pip xvfb tor
+- sudo apt-get update; sudo apt-get install -y python3-pytest python3-flask python3-pyqt5 python3-pip xvfb tor curl
 - sudo pip3 install stem
 install: ""
 # command to run tests
