--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,4 @@ python:
 before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5"
 install: ""
 # command to run tests
-script: nosetests3
+script: pytest
