--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
   - "3.7-dev"
   - "nightly"
 # command to install dependencies
-before_install: "sudo apt-get update; sudo apt-get install -y python3-nose python3-flask python3-stem python3-pyqt5"
+before_install: "sudo apt-get update; sudo apt-get install -y python3-pytest python3-flask python3-stem python3-pyqt5"
 install: ""
 # command to run tests
 script: pytest
