--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 Package3: onionshare
 Depends3: python3-flask, python3-stem, python3-pyqt5, python-nautilus, tor
-Build-Depends3: python3-nose, python3-flask, python3-stem, python3-pyqt5
+Build-Depends3: python3-pytest, python3-flask, python3-stem, python3-pyqt5
 Suite: xenial
 X-Python3-Version: >= 3.2
