--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ python:
 install:
   - pip install Flask==0.12 stem==1.5.4 pytest-cov coveralls
 # command to run tests
-script: pytest test/ --cov test/
-after_success:
-  - coveralls
+script: pytest --cov=onionshare test/
+# after_success:
+#   - coveralls
