--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,12 @@
 include LICENSE
 include README.md
 include BUILD.md
-include resources/*
-include resources/images/*
-include resources/locale/*
-include resources/html/*
+include share/*
+include share/images/*
+include share/locale/*
+include share/html/*
 include install/onionshare.desktop
 include install/onionshare.appdata.xml
 include install/onionshare80.xpm
 include install/scripts/onionshare-nautilus.py
+include test/*.py
