--- a/install/requirements-windows.txt
+++ b/install/requirements-windows.txt
@@ -1,10 +1,12 @@
 click==6.7
+cryptography==2.1.4
 Flask==0.12.2
 future==0.16.0
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 pefile==2017.11.5
+pynacl==1.2.1
 PyInstaller==3.3.1
 PyQt5==5.9.2
 PySocks==1.6.7
