--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -1,9 +1,11 @@
 click==6.7
+cryptography==2.1.4
 Flask==0.12.2
 itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 PyInstaller==3.3.1
+pynacl==1.2.1
 PyQt5==5.9.2
 PySocks==1.6.7
 pycrypto==2.6.1
