Add dependencies to tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  - pip install Flask==0.12 stem==1.5.4 pytest-cov coveralls
+  - pip install Flask==0.12 stem==1.5.4 pytest-cov pycrypto pynacl cryptography coveralls
 # command to run tests
 script: pytest --cov=onionshare test/
 after_success:
