Add [da] translations
Perhaps add info about this in https://github.com/micahflee/onionshare/wiki/Translating so translators can know they need to translate this file also.
Or even better add the strings to the .json translations files so alle strings are in one place.

--- a/install/onionshare.desktop
+++ b/install/onionshare.desktop
@@ -1,9 +1,11 @@
 [Desktop Entry]
 Name=OnionShare
 Comment=Share a file securely and anonymously over Tor
+Comment[da]=Del en fil sikkert og anonymt over Tor
 Exec=/usr/bin/onionshare-gui
 Terminal=false
 Type=Application
 Icon=/usr/share/pixmaps/onionshare80.xpm
 Categories=Network;
 Keywords=tor;anonymity;privacy;onion service;file sharing;file hosting;
+Keywords[da]=tor;anonymitet;privatliv;onion-tjeneste;fildeling;filhosting;
