--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,7 +4,8 @@ include BUILD.md
 include share/*
 include share/images/*
 include share/locale/*
-include share/html/*
+include share/templates/*
+include share/static/*
 include install/onionshare.desktop
 include install/onionshare.appdata.xml
 include install/onionshare80.xpm
