--- a/install/requirements-windows.txt
+++ b/install/requirements-windows.txt
@@ -1,4 +1,5 @@
 click==6.7
+cryptography==2.1.4
 Flask==0.12.2
 future==0.16.0
 itsdangerous==0.24
@@ -8,6 +9,9 @@ pefile==2017.11.5
 PyInstaller==3.3.1
 PyQt5==5.9.2
 PySocks==1.6.7
+pynacl==1.2.1
+pycrypto==2.6.1
+pysha3==1.0.2
 sip==4.19.6
 stem==1.6.0
 Werkzeug==0.14.1
