--- a/install/requirements-windows.txt
+++ b/install/requirements-windows.txt
@@ -1,14 +1,26 @@
+altgraph==0.15
+certifi==2018.4.16
+chardet==3.0.4
 click==6.7
 Flask==0.12.2
 future==0.16.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
+macholib==1.9
 MarkupSafe==1.0
+packaging==17.1
 pefile==2017.11.5
 PyInstaller==3.3.1
+pyparsing==2.2.0
+pypiwin32==223
 PyQt5==5.9.2
 PySocks==1.6.7
+python-dateutil==2.7.3
+pywin32==223
 requests==2.19.1
 sip==4.19.6
+six==1.11.0
 stem==1.6.0
+urllib3==1.23
 Werkzeug==0.14.1
