--- a/stdeb.cfg
+++ b/stdeb.cfg
@@ -2,5 +2,5 @@
 Package3: onionshare
 Depends3: python3-flask, python3-stem, python3-pyqt5, python-nautilus, tor, obfs4proxy
 Build-Depends: python3-pytest, python3-flask, python3-stem, python3-pyqt5
-Suite: xenial
-X-Python3-Version: >= 3.4
+Suite: bionic
+X-Python3-Version: >= 3.6
