--- a/install/requirements-windows.txt
+++ b/install/requirements-windows.txt
@@ -2,6 +2,7 @@ altgraph==0.16.1
 certifi==2018.8.24
 chardet==3.0.4
 click==6.7
+cryptography==2.3.1
 Flask==1.0.2
 future==0.16.0
 idna==2.7
@@ -16,6 +17,9 @@ pyparsing==2.2.0
 pypiwin32==223
 PyQt5==5.11.2
 PySocks==1.6.8
+pynacl==1.2.1
+pycrypto==2.6.1
+pysha3==1.0.2
 python-dateutil==2.7.3
 pywin32==223
 requests==2.19.1
