--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r install/requirements.txt
-  - pip install pytest-cov coveralls flake8 pytest-faulthandler pytest-ordering
+  - pip install pytest-cov coveralls flake8 pytest-faulthandler pytest-ordering pytest-qt
 before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
