--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r install/requirements.txt
-  - pip install pytest-cov coveralls flake8 pytest-faulthandler pytest-ordering pytest-qt
-  - sudo apt-get install python3-pytest
+  - pip install pytest-cov coveralls flake8
 before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
@@ -18,6 +17,5 @@ before_script:
     - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 # command to run tests
 script: pytest --cov=onionshare test/
-script: cd unit_tests && bash run_unit_tests_travis.sh
 after_success:
   - coveralls
