--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ python:
 # command to install dependencies
 install:
   - pip install -r install/requirements.txt
-  - pip install pytest-cov coveralls flake8
+  - pip install pytest-cov coveralls flake8 pytest-faulthandler pytest-ordering pytest-qt pytest
 before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
@@ -17,5 +17,6 @@ before_script:
     - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 # command to run tests
 script: pytest --cov=onionshare test/
+script: xvfb-run py.test-3 unit_tests/onionshare_share_mode_download_test.py
 after_success:
   - coveralls
