Rename test dir to tests. Rename unit_tests to tests_gui_local. Add test dependencies. Update various paths. Add GUI unit tests docs to BUILD.md

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,4 +10,4 @@ include install/onionshare.desktop
 include install/onionshare.appdata.xml
 include install/onionshare80.xpm
 include install/scripts/onionshare-nautilus.py
-include test/*.py
+include tests/*.py
