--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ before_script:
     # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
     - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 # command to run tests
-script: pytest --cov=onionshare test/
+script: pytest --cov=onionshare tests/
 after_success:
   - coveralls
