--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
-# sudo: required
-dist: bionic
+dist: trusty
+sudo: required
 python:
   - "3.6"
   - "3.6-dev"
@@ -8,14 +8,18 @@ python:
   - "nightly"
 # command to install dependencies
 install:
+  - sudo apt-get update && sudo apt-get install python3-pyqt5
   - pip install -r install/requirements.txt
+  - pip install -r install/requirements-tests.txt
   - pip install pytest-cov coveralls flake8
 before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
     # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
     - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-# command to run tests
-script: pytest --cov=onionshare tests/
+# run CLI tests and local GUI tests
+script:
+  - pytest --cov=onionshare tests/
+  - cd tests_gui_local/ && xvfb-run ./run_unit_tests.sh
 after_success:
   - coveralls
