--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - sudo apt-get update && sudo apt-get install python3-pyqt5
   - pip install -r install/requirements.txt
   - pip install -r install/requirements-tests.txt
-  - pip install pytest-cov coveralls flake8
+  - pip install pytest-cov flake8
 before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
@@ -21,5 +21,3 @@ before_script:
 script:
   - pytest --cov=onionshare tests/
   - cd tests_gui_local/ && xvfb-run ./run_unit_tests.sh
-after_success:
-  - coveralls
