Revert "Try and move local tests into main tests dir. Rename local tests. Save test settings to unique json files to avoid race conditions"
This reverts commit 43eda6b9df808b2ef29b98ae3b9fb9803843cfc2.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,5 @@ before_script:
     - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 # run CLI tests and local GUI tests
 script:
-  - xvfb-run pytest --cov=onionshare tests/
+  - pytest --cov=onionshare tests/
+  - cd tests_gui_local/ && xvfb-run ./run_unit_tests.sh
