--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ before_script:
 # run CLI tests and local GUI tests
 script:
   - pytest --cov=onionshare tests/
-  - cd tests_gui_local/ && xvfb-run ./run_unit_tests.sh
+  - xvfb-run pytest tests_gui_local/
