--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,27 +18,26 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      - restore_cache:
-          keys:
-          - v1-dependencies-{{ checksum "install/requirements-tests.txt" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
-
       - run:
           name: install dependencies
           command: |
+            sudo apt-get update && sudo apt-get install python3-pyqt5
             python3 -m venv venv
             . venv/bin/activate
+            pip install -r install/requirements.txt
+            pip install -r install/requirements-tests.txt
+            pip install pytest-cov flake8
             pip install -r install/requirements-tests.txt
 
-      - save_cache:
-          paths:
-            - ./venv
-          key: v1-dependencies-{{ checksum "install/requirements-tests.txt" }}
-        
       # run tests!
       - run:
+          name: run flask tests
+          command: | 
+            # stop the build if there are Python syntax errors or undefined names
+            flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+            # exit-zero treats all errors as warnings.  The GitHub editor is 127 chars wide
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
           name: run tests
           command: |
             . venv/bin/activate
