--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
+            sudo apt-get update && sudo apt-get install python3-pyqt5
             sudo pip3 install -r install/requirements.txt
             sudo pip3 install -r install/requirements-tests.txt
             sudo pip3 install pytest-cov flake8
