--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.6.6
+      - image: debian/buster
       
     working_directory: ~/repo
 
@@ -18,7 +18,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            sudo apt-get update && sudo apt-get install python3-pyqt5
+            sudo apt-get update && sudo apt-get install python3-pyqt5 python3-pip
             sudo pip3 install -r install/requirements.txt
             sudo pip3 install -r install/requirements-tests.txt
             sudo pip3 install pytest-cov flake8
