--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,10 +18,10 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            sudo apt-get update && sudo apt-get install python3-pyqt5 python3-pip
-            sudo pip3 install -r install/requirements.txt
-            sudo pip3 install -r install/requirements-tests.txt
-            sudo pip3 install pytest-cov flake8
+            apt-get update && apt-get install python3-pyqt5 python3-pip
+            pip3 install -r install/requirements.txt
+            pip3 install -r install/requirements-tests.txt
+            pip3 install pytest-cov flake8
 
       # run tests!
       - run:
