--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            apt-get update && apt-get install python3-pyqt5 python3-pip
+            apt-get update && apt-get install -y python3-pyqt5 python3-pip
             pip3 install -r install/requirements.txt
             pip3 install -r install/requirements-tests.txt
             pip3 install pytest-cov flake8
