--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
       - run:
           name: install dependencies
           command: |
-            apt-get update && apt-get install -y python3-pip python3-flask python3-stem python3-pyqt5 python3-cryptography python3-crypto python3-nacl python3-socks python3-stdeb python3-all python-nautilus xvfb obfs4proxy
-            pip3 install -r install/requirements-tests.txt
-            pip3 install pytest-cov flake8
+            sudo apt-get update && apt-get install -y python3-pip python3-flask python3-stem python3-pyqt5 python3-cryptography python3-crypto python3-nacl python3-socks python3-stdeb python3-all python-nautilus xvfb obfs4proxy
+            sudo pip3 install -r install/requirements-tests.txt
+            sudo pip3 install pytest-cov flake8
 
       # run tests!
       - run:
