--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ python:
   - "nightly"
 # command to install dependencies
 install:
-  - sudo apt-get update && sudo apt-get install -y python3-pip python3-flask python3-stem python3-pyqt5 python3-cryptography python3-crypto python3-nacl python3-socks python3-stdeb python3-all python-nautilus xvfb obfs4proxy
-  - sudo pip3 install -r install/requirements.txt
-  - sudo pip3 install -r install/requirements-tests.txt
-  - sudo pip3 install pytest-cov flake8
+  - sudo apt-get update && sudo apt-get install python3-pyqt5
+  - pip install -r install/requirements.txt
+  - pip install -r install/requirements-tests.txt
+  - pip install pytest-cov flake8
 before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
