--- a/install/macos_sandbox/parent.plist
+++ b/install/macos_sandbox/parent.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>com.apple.security.app-sandbox</key>
 	<true/>
+	<key>com.apple.security.network.server</key>
+	<true/>
 	<key>com.apple.security.network.client</key>
 	<true/>
 	<key>com.apple.security.files.user-selected.read-only</key>
@@ -12,5 +14,9 @@
 	<array>
     <string>/OnionShare</string>
   </array>
+	<key>com.apple.security.application-groups</key>
+    <array>
+        <string>com.micahflee.onionshare</string>
+    </array>
 </dict>
 </plist>
