Update pip dependencies

--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -1,26 +1,26 @@
 altgraph==0.16.1
 asn1crypto==0.24.0
-certifi==2018.8.24
+certifi==2018.10.15
 cffi==1.11.5
 chardet==3.0.4
-click==6.7
-cryptography==2.3.1
+Click==7.0
+cryptography==2.4.2
 Flask==1.0.2
-future==0.16.0
+future==0.17.1
 idna==2.7
-itsdangerous==0.24
+itsdangerous==1.1.0
 Jinja2==2.10
 macholib==1.11
-MarkupSafe==1.0
+MarkupSafe==1.1.0
 pefile==2018.8.8
-pycparser==2.18
-pycryptodome==3.6.6
+pycparser==2.19
+pycryptodome==3.7.2
 PyInstaller==3.4
-PyQt5==5.11.2
-PyQt5-sip==4.19.12
+PyQt5==5.11.3
+PyQt5-sip==4.19.13
 PySocks==1.6.8
-requests==2.19.1
+requests==2.20.1
 six==1.11.0
 stem==1.7.0
-urllib3==1.23
+urllib3==1.24.1
 Werkzeug==0.14.1
