--- a/install/org.onionshare.OnionShare.desktop
+++ b/install/org.onionshare.OnionShare.desktop
@@ -7,7 +7,7 @@ Comment[de]=Teile Dateien sicher und anonym über das Tor-Netzwerk
 Exec=/usr/bin/onionshare-gui
 Terminal=false
 Type=Application
-Icon=onionshare80
+Icon=org.onionshare.OnionShare
 Categories=Network;FileTransfer;
 Keywords=tor;anonymity;privacy;onion service;file sharing;file hosting;
 Keywords[da]=tor;anonymitet;privatliv;onion-tjeneste;fildeling;filhosting;
