--- a/install/requirements.txt
+++ b/install/requirements.txt
@@ -12,6 +12,7 @@ macholib==1.11
 MarkupSafe==1.1.1
 pefile==2019.4.18
 pycryptodome==3.9.0
+PyInstaller==3.5
 PyQt5==5.13.0
 PyQt5-sip==4.19.18
 PySocks==1.7.0
