add dependency setuptools
It is needed for pkg_resources.

--- a/desktop/pyproject.toml
+++ b/desktop/pyproject.toml
@@ -12,6 +12,7 @@ PySide6 = "6.5.2"
 qrcode = "*"
 werkzeug = "*"
 python-gnupg = "*"
+setuptools = "*"
 
 [tool.poetry.dev-dependencies]
 click = "*"
