--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -34,7 +34,7 @@ gevent-websocket = "*"
 stem = "1.8.1"
 waitress = "^2.1.2"
 werkzeug = ">=2.3.4"
-packaging = "^23.1"
+packaging = ">=24"
 gevent = "^23.9.1"
 wheel = "^0.41.2"
 cffi = "^1.15.1"
