--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -27,7 +27,7 @@ requests = {extras = ["socks"], version = "*"}
 unidecode = "*"
 urllib3 = "*"
 eventlet = "*"
-setuptools = "*"
+setuptools = "^74"
 pynacl = "*"
 colorama = "*"
 gevent-websocket = "*"
