Revert "Downgrade setuptools"
This reverts commit 737c9773dd900cde56e7d5e887e32fd85f442008.

--- a/cli/pyproject.toml
+++ b/cli/pyproject.toml
@@ -27,7 +27,7 @@ requests = {extras = ["socks"], version = "*"}
 unidecode = "*"
 urllib3 = "*"
 eventlet = "*"
-setuptools = "^74"
+setuptools = "*"
 pynacl = "*"
 colorama = "*"
 gevent-websocket = "*"
