Build without keeping build dirs, and recursively list the build dir to see the permissions where it fails. Move obfs4proxy to run later so we can see if this is a problem for all 3 PTs

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -254,7 +254,7 @@ jobs:
       - name: Flatpak build
         run: |
           cd flatpak
-          flatpak-builder build --force-clean --keep-build-dirs --verbose --install-deps-from=flathub --install --user org.onionshare.OnionShare.yaml
+          flatpak-builder build --force-clean --verbose --install-deps-from=flathub --install --user org.onionshare.OnionShare.yaml
           flatpak build-bundle ~/.local/share/flatpak/repo ~/OnionShare.flatpak org.onionshare.OnionShare --runtime-repo=https://flathub.org/repo/flathub.flatpakrepo
 
       - uses: actions/upload-artifact@v4
