Some docs updates.
 * Add section to the CLI docs about how to use the CLI on different platforms, per https://github.com/onionshare/onionshare/issues/1945
 * Rebuild locales per poetry run ./build.sh as they were out of date with the rst
 * set package-mode=false in pyproject.toml to be compatible with newer poetry.

--- a/docs/pyproject.toml
+++ b/docs/pyproject.toml
@@ -3,6 +3,7 @@ name = "onionshare-docs"
 version = "0.1.0"
 description = ""
 authors = ["Micah Lee <micah@micahflee.com>"]
+package-mode = false
 
 [tool.poetry.dependencies]
 python = "^3.9"
