--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -49,10 +49,14 @@ apps:
 parts:
   onionshare-cli:
     source: ./cli
-    plugin: nil
+    plugin: python
+    build-packages:
+      - python3-poetry
     override-pull: |
       craftctl default
-      rm pyproject.toml poetry.lock
+    override-build: |
+      python3 -m venv $CRAFT_PART_INSTALL
+      pip install -r cli-requirements.txt
     after: [tor, obfs4, snowflake-client, meek-client]
 
   onionshare:
@@ -139,38 +143,10 @@ parts:
       - libxkbfile1
     override-pull: |
       craftctl default
-      rm pyproject.toml poetry.lock
-      cat > requirements.txt << EOF
-      # onionshare_cli
-      click
-      flask==2.3.2
-      flask-compress==1.13
-      flask-socketio==5.3.4
-      psutil
-      pysocks
-      requests[socks]
-      unidecode
-      urllib3
-      eventlet
-      setuptools
-      pynacl
-      colorama
-      gevent-websocket
-      stem==1.8.1
-      waitress
-      werkzeug==3.0.6
-      # onionshare
-      PySide6==6.5.2
-      qrcode
-      packaging
-      EOF
     override-build: |
       python3 -m venv $CRAFT_PART_INSTALL
       . $CRAFT_PART_INSTALL/bin/activate
-      pip install -U pip setuptools wheel
-      pip install -U -r requirements.txt
-      pip install -U ../../onionshare-cli/src
-      pip install -U .
+      pip install -r desktop-requirements.txt
       deactivate
       sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare
       sed -i 's|'$CRAFT_PART_INSTALL'/bin/python3|/usr/bin/env python3|g' $CRAFT_PART_INSTALL/bin/onionshare-cli
