libodbc1 for cli install

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -51,6 +51,8 @@ parts:
     plugin: python
     build-packages:
       - python3-poetry
+    stage-packages:
+      - libodbc1
     override-pull: |
       craftctl default
     override-build: |
